# one_two_take_it

./: LICENSE  main.py  pyproject.toml
src/: bag_debris.py  camera.py  confetti.py  game.py  menu.py  models.py  particle.py  physic.py  platform.py  player.py  shaders.py  snow.py  sound_manager.py  ui.py  utils.py
src/templates/: ui.py
