[project]
name = "one_two_take_it"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]


[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["I001"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
